# cmangos-attunement

./: CMakeLists.txt  README.md
sql/install/characters/: characters.sql
sql/install/world/: world.sql
src/: AttunementModule.cpp  AttunementModule.h  AttunementModuleConfig.cpp  AttunementModuleConfig.h  attunement.conf.dist.in
